# Owasp-AI

.github/workflows/: check-filenames-pr.yml  rigging_pr_description.yaml
diffs/057a583b-e41f-4637-9581-3d2fdfd81ef1/: check_pinned_hash_dependencies.py.diff
diffs/613ae977-86cd-4959-bc7d-e4996c5c0755/: check_pinned_hash_dependencies.py.diff
initiatives/agent_security_initiative/samples/frameworks/autogen/autogen_refund_demo/: Dockerfile  requirements.txt
initiatives/agent_security_initiative/samples/frameworks/crewai/freysa_demo/: requirements.txt
initiatives/agent_security_initiative/samples/frameworks/custom_code/ai_recruiter/: Dockerfile
initiatives/agent_security_initiative/samples/frameworks/langgraph/github_improper_output_handling/: Dockerfile
initiatives/agent_security_initiative/samples/frameworks/langgraph/multi_agent/: Dockerfile  pyproject.toml  requirements.txt
